# platform.upstream.libXxf86dga

./: .gitignore  ChangeLog  Makefile.am  configure.ac  libXxf86dga-1.1.3.tar.bz2.delta  libXxf86dga-1.1.3.tar.bz2.id  libXxf86dga-1.1.3.tar.gz.delta  project.config  xxf86dga.pc.in
man/: Makefile.am  XDGA.man
packaging/: baselibs.conf  libXxf86dga.changes  libXxf86dga.spec
src/: .gitignore  Makefile.am  XF86DGA.c  XF86DGA2.c
